--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "ypy-websocket"
+name = "pycrdt-websocket"
 dynamic = ["version"]
-description = "WebSocket connector for Ypy"
+description = "WebSocket connector for pycrdt"
 license = { file = "LICENSE" }
 readme = "README.md"
-requires-python = ">=3.7"
+requires-python = ">=3.8"
 authors = [
     { name = "David Brochart", email = "david.brochart@gmail.com" },
 ]
@@ -21,17 +21,16 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "anyio >=3.6.2,<5",
     "aiosqlite >=0.18.0,<1",
-    "pycrdt >=0.4.1,<0.5.0",
-    "typing_extensions; python_version < '3.8'",
+    "pycrdt >=0.7.0,<0.8.0",
 ]
 
 [project.optional-dependencies]
@@ -53,17 +52,17 @@ django = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/y-crdt/ypy-websocket"
-Source = "https://github.com/y-crdt/ypy-websocket"
-Issues = "https://github.com/y-crdt/ypy-websocket/issues"
-Pypi = "https://pypi.org/project/ypy-websocket"
+Homepage = "https://github.com/davidbrochart/pycrdt-websocket"
+Source = "https://github.com/davidbrochart/pycrdt-websocket"
+Issues = "https://github.com/davidbrochart/pycrdt-websocket/issues"
+Pypi = "https://pypi.org/project/pycrdt-websocket"
 
 [tool.hatch.version]
-path = "ypy_websocket/__init__.py"
+path = "pycrdt_websocket/__init__.py"
 
 [tool.hatch.build.targets.sdist]
 include = [
-    "/ypy_websocket",
+    "/pycrdt_websocket",
     "/tests",
 ]
 
