--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 dependencies = [
     "anyio >=3.6.2,<5",
+    "nest_asyncio",
     "sqlite-anyio >=0.2.3,<0.3.0",
     "pycrdt >=0.9.16,<0.10.0",
 ]
